# kafka-interchange

./: CHANGELOG.md  LICENSE  README.md  cabal.project  kafka-interchange.cabal
docs/: notes.md
golden/api-versions-request/v3/: 001.txt
golden/api-versions-response/v3/: 001.input.txt  001.output.txt
golden/fetch-request/v13/: 001.input.json  001.output.txt
golden/fetch-response/v13/: 001.batch.1.txt  001.batch.txt  001.input.txt  001.original.txt  001.output.txt
golden/find-coordinator-request/v4/: 001.input.json  001.output.txt
golden/find-coordinator-response/v4/: 001.input.txt  001.output.txt
golden/heartbeat-request/v4/: 001.input.json  001.output.txt
golden/heartbeat-response/v4/: 001.input.txt  001.output.txt
golden/init-producer-id-request/v4/: 001.input.json  001.output.txt
golden/init-producer-id-response/v4/: 001.input.txt  001.output.txt
golden/join-group-request/v9/: 001.output.txt  002.input.json  002.output.txt
golden/join-group-response/v9/: 001.input.txt  001.output.txt  002.input.txt  002.output.txt
golden/join-group/v9/: 001.input.json
golden/leave-group-request/v5/: 001.input.json  001.output.txt
golden/leave-group-response/v5/: 001.input.txt  001.output.txt
golden/list-offsets-request/v7/: 001.input.json  001.output.txt
golden/list-offsets-response/v7/: 001.input.txt  001.output.txt
golden/metadata-request/v12/: 001.input.json  001.output.txt
golden/metadata-response/v12/: 001.input.txt  001.output.txt
golden/offset-fetch-request/v8/: 001.input.json  001.output.txt
golden/offset-fetch-response/v8/: 001.input.txt  001.output.txt
golden/produce-request/v9/: 001.txt  002.txt  003.batch.txt  003.txt
golden/produce-response/v9/: 001.output.txt  001.txt
golden/records-response/: 001.input.txt  001.output.txt
golden/subscription-request/v1/: 001.input.json
golden/subscription-response/v1/: 001.input.txt  001.output.txt
golden/sync-group-request/v5/: 001.input.json  001.output.txt
golden/sync-group-response/v5/: 001.input.txt  001.output.txt
src-exchange/: Channel.hsig  Communication.hsig  Exchange.hs
src-exchange-all/: Client.hs
src-simple-exchange/: Channel.hsig  Error.hsig  Exchange.hs
src-simple-exchange-all/: Client.hs
src/Kafka/: Acknowledgments.hs  ApiKey.hs  Builder.hs  ErrorCode.hs  Parser.hs  TaggedField.hs
src/Kafka/ApiVersions/: V3.hs
src/Kafka/ApiVersions/Request/: V3.hs
src/Kafka/ApiVersions/Response/: V3.hs
src/Kafka/Assignment/Request/: V1.hs
src/Kafka/Assignment/Response/: V1.hs
src/Kafka/Builder/: Bounded.hs
src/Kafka/Data/: Acknowledgments.hs  Record.hs  RecordBatch.hs  TaggedField.hs
src/Kafka/Exchange/: Error.hs
src/Kafka/Fetch/: V12.hs  V13.hs
src/Kafka/Fetch/Request/: V12.hs  V13.hs
src/Kafka/Fetch/Response/: V12.hs  V13.hs
src/Kafka/FindCoordinator/: V4.hs
src/Kafka/FindCoordinator/Request/: V4.hs
src/Kafka/FindCoordinator/Response/: V4.hs
src/Kafka/Header/Response/: V0.hs  V1.hs
src/Kafka/Heartbeat/: V4.hs
src/Kafka/Heartbeat/Request/: V4.hs
src/Kafka/Heartbeat/Response/: V4.hs
src/Kafka/InitProducerId/: V4.hs
src/Kafka/InitProducerId/Request/: V4.hs
src/Kafka/InitProducerId/Response/: V4.hs
src/Kafka/Interchange/ApiVersions/: V3.hs
src/Kafka/Interchange/ApiVersions/Request/: V3.hs
src/Kafka/Interchange/ApiVersions/Response/: V3.hs
src/Kafka/Interchange/Assignment/Request/: V1.hs
src/Kafka/Interchange/Assignment/Response/: V1.hs
src/Kafka/Interchange/Fetch/: V13.hs
src/Kafka/Interchange/Fetch/Request/: V13.hs
src/Kafka/Interchange/Fetch/Response/: V13.hs
src/Kafka/Interchange/FindCoordinator/: V4.hs
src/Kafka/Interchange/FindCoordinator/Request/: V4.hs
src/Kafka/Interchange/FindCoordinator/Response/: V4.hs
src/Kafka/Interchange/Header/Response/: V0.hs  V1.hs
src/Kafka/Interchange/InitProducerId/: V4.hs
src/Kafka/Interchange/InitProducerId/Request/: V4.hs
src/Kafka/Interchange/InitProducerId/Response/: V4.hs
src/Kafka/Interchange/JoinGroup/: V9.hs
src/Kafka/Interchange/JoinGroup/Request/: V9.hs
src/Kafka/Interchange/JoinGroup/Response/: V9.hs
src/Kafka/Interchange/ListOffsets/: V7.hs
src/Kafka/Interchange/ListOffsets/Request/: V7.hs
src/Kafka/Interchange/ListOffsets/Response/: V7.hs
src/Kafka/Interchange/Message/Request/: V2.hs
src/Kafka/Interchange/Metadata/: V12.hs
src/Kafka/Interchange/Metadata/Request/: V12.hs
src/Kafka/Interchange/Metadata/Response/: V12.hs
src/Kafka/Interchange/Produce/: V9.hs
src/Kafka/Interchange/Produce/Request/: V9.hs
src/Kafka/Interchange/Produce/Response/: V9.hs
src/Kafka/Interchange/Record/: Request.hs  Response.hs
src/Kafka/Interchange/RecordBatch/: Attributes.hs  Request.hs  Response.hs
src/Kafka/Interchange/Subscription/Request/: V1.hs
src/Kafka/Interchange/Subscription/Response/: V1.hs
src/Kafka/Interchange/SyncGroup/: V5.hs
src/Kafka/Interchange/SyncGroup/Request/: V5.hs
src/Kafka/Interchange/SyncGroup/Response/: V5.hs
src/Kafka/JoinGroup/: V9.hs
src/Kafka/JoinGroup/Request/: V9.hs
src/Kafka/JoinGroup/Response/: V9.hs
src/Kafka/LeaveGroup/: V5.hs
src/Kafka/LeaveGroup/Request/: V5.hs
src/Kafka/LeaveGroup/Response/: V5.hs
src/Kafka/ListOffsets/: V7.hs
src/Kafka/ListOffsets/Request/: V7.hs
src/Kafka/ListOffsets/Response/: V7.hs
src/Kafka/Message/Request/: V2.hs
src/Kafka/Metadata/: V11.hs  V12.hs
src/Kafka/Metadata/Request/: V11.hs  V12.hs
src/Kafka/Metadata/Response/: V11.hs  V12.hs
src/Kafka/OffsetFetch/: V8.hs
src/Kafka/OffsetFetch/Request/: V8.hs
src/Kafka/OffsetFetch/Response/: V8.hs
src/Kafka/Parser/: Context.hs
src/Kafka/Produce/: V9.hs
src/Kafka/Produce/Request/: V9.hs
src/Kafka/Produce/Response/: V9.hs
src/Kafka/Record/: Request.hs  Response.hs
src/Kafka/RecordBatch/: Attributes.hs  Request.hs  Response.hs
src/Kafka/Subscription/Request/: V1.hs
src/Kafka/Subscription/Response/: V1.hs
src/Kafka/SyncGroup/: V5.hs
src/Kafka/SyncGroup/Request/: V5.hs
src/Kafka/SyncGroup/Response/: V5.hs
test/: KafkaFromJson.hs  Test.hs
