cabal-version: 3.4
name: kafka-interchange
version: 0.1
license: BSD-3-Clause
license-file: LICENSE
author: Andrew Martin
maintainer: amartin@layer3com.com
copyright: 2023 Layer 3 Communications
category: Data
extra-source-files: README.md

library exchange
  visibility: public
  build-depends:
    , base >= 4.11.1.0 && <5
    , kafka-interchange
    , text >=2.0
    , byteslice >=0.2.8
    , primitive >=0.8 
    , bytesmith >=0.3.9
    , byte-order >=0.1.3
  signatures:
    Communication
    Channel
  exposed-modules:
    Exchange
  hs-source-dirs: src-exchange
  default-language: Haskell2010
  ghc-options: -O2 -Wall

-- Inherited signature: Channel
library exchange-all
  visibility: public
  build-depends:
    , base >=4.10 && <5
    , kafka-interchange
    , kafka-interchange:exchange
  mixins:
    kafka-interchange:exchange (Exchange as Produce.V9)
      requires (Communication as Kafka.Interchange.Produce.V9),
    kafka-interchange:exchange (Exchange as ApiVersions.V3)
      requires (Communication as Kafka.Interchange.ApiVersions.V3),
    kafka-interchange:exchange (Exchange as Metadata.V12)
      requires (Communication as Kafka.Interchange.Metadata.V12),
    kafka-interchange:exchange (Exchange as SyncGroup.V5)
      requires (Communication as Kafka.Interchange.SyncGroup.V5),
    kafka-interchange:exchange (Exchange as JoinGroup.V9)
      requires (Communication as Kafka.Interchange.JoinGroup.V9),
    kafka-interchange:exchange (Exchange as Fetch.V13)
      requires (Communication as Kafka.Interchange.Fetch.V13),
    kafka-interchange:exchange (Exchange as FindCoordinator.V4)
      requires (Communication as Kafka.Interchange.FindCoordinator.V4),
    kafka-interchange:exchange (Exchange as ListOffsets.V7)
      requires (Communication as Kafka.Interchange.ListOffsets.V7),
    kafka-interchange:exchange (Exchange as InitProducerId.V4)
      requires (Communication as Kafka.Interchange.InitProducerId.V4),
  exposed-modules:
    Client
  hs-source-dirs: src-exchange-all
  default-language: Haskell2010
  ghc-options: -O2 -Wall

library
  exposed-modules:
    Kafka.Interchange.Message.Request.V2
    Kafka.Interchange.ApiVersions.Request.V3
    Kafka.Interchange.ApiVersions.Response.V3
    Kafka.Interchange.ApiVersions.V3
    Kafka.Interchange.Metadata.Request.V12
    Kafka.Interchange.Metadata.Response.V12
    Kafka.Interchange.Metadata.V12
    Kafka.Interchange.InitProducerId.Request.V4
    Kafka.Interchange.InitProducerId.Response.V4
    Kafka.Interchange.InitProducerId.V4
    Kafka.Interchange.Produce.V9
    Kafka.Interchange.Produce.Request.V9
    Kafka.Interchange.Produce.Response.V9
    Kafka.Interchange.Header.Response.V0
    Kafka.Interchange.Header.Response.V1
    Kafka.Interchange.FindCoordinator.Request.V4
    Kafka.Interchange.FindCoordinator.Response.V4
    Kafka.Interchange.FindCoordinator.V4
    Kafka.Interchange.ListOffsets.Request.V7
    Kafka.Interchange.ListOffsets.Response.V7
    Kafka.Interchange.ListOffsets.V7
    Kafka.Interchange.Fetch.Request.V13
    Kafka.Interchange.Fetch.Response.V13
    Kafka.Interchange.Fetch.V13
    Kafka.Interchange.Record.Request
    Kafka.Interchange.Record.Response
    Kafka.Interchange.RecordBatch.Attributes
    Kafka.Interchange.RecordBatch.Request
    Kafka.Interchange.RecordBatch.Response
    Kafka.Interchange.Assignment.Request.V1
    Kafka.Interchange.Assignment.Response.V1
    Kafka.Interchange.Subscription.Request.V1
    Kafka.Interchange.Subscription.Response.V1
    Kafka.Interchange.JoinGroup.Request.V9
    Kafka.Interchange.JoinGroup.Response.V9
    Kafka.Interchange.JoinGroup.V9
    Kafka.Interchange.SyncGroup.Request.V5
    Kafka.Interchange.SyncGroup.Response.V5
    Kafka.Interchange.SyncGroup.V5
    Kafka.Data.Acknowledgments
    Kafka.Data.TaggedField
    Kafka.ApiKey
    Kafka.Parser.Context
    Kafka.Exchange.Error
  other-modules:
    Kafka.Parser
    Kafka.Builder
    Kafka.Builder.Bounded
  ghc-options:
    -Wall
    -O2
  build-depends:
    , base >= 4.11 && < 5
    , byteslice >= 0.1.1.0 && < 0.3.0.0
    , bytebuild >= 0.3.14
    , bytesmith >= 0.3 && < 0.4
    , castagnoli >= 0.2
    , chronos >= 1.1.5
    , containers >= 0.5
    , contiguous >= 0.6
    , ip >= 1.5.0 && < 1.8
    , mtl >= 2.2.2 && < 2.3
    , primitive >= 0.7.0.0 && < 0.10
    , primitive-unaligned >= 0.1.1.0 && < 0.2.0.0
    , primitive-unlifted >= 0.1.1.0 && < 0.2.0.0
    , stm >= 2.5.0.0
    , text >= 2.0
    , text-short >= 0.1.5
    , torsor >= 0.1 && < 0.2
    , transformers >= 0.5 && < 0.7
    , bytestring >=0.11
    , natural-arithmetic >=0.1.3
    , zigzag >=0.0.1
    , wide-word >=0.1.5
  hs-source-dirs:
    src
  default-language:
    Haskell2010

test-suite test
  type:
    exitcode-stdio-1.0
  main-is:
    Test.hs
  other-modules:
    KafkaFromJson
  hs-source-dirs:
    test
  build-depends:
    , base
    , bytesmith
    , bytestring
    , containers
    , kafka-interchange
    , primitive
    , primitive-unlifted
    , tasty
    , tasty-golden
    , tasty-hunit
    , bytebuild
    , base16 >=0.3.2.1
    , byteslice
    , text
    , pretty-show >=1.10
    , aeson >=2.1.2.1
    , wide-word >=0.1.5
  default-language:
    Haskell2010
  ghc-options:
    -Wall
    -O2
