cabal-version: 3.4
name: kafka-interchange
version: 0.1
license: BSD-3-Clause
license-file: LICENSE
author: Andrew Martin
maintainer: amartin@layer3com.com
copyright: 2023 Layer 3 Communications
category: Data
extra-source-files: README.md

library simple-exchange
  visibility: public
  build-depends:
    , base >= 4.11.1.0 && <5
    , kafka-interchange
    , text >=2.0
    , byteslice >=0.2.8
    , primitive >=0.8 
    , bytesmith >=0.3.9
    , byte-order >=0.1.3
    , transformers >=0.5.6
  signatures:
    Communication
    Channel
    Error
  exposed-modules:
    Exchange
  hs-source-dirs: src-simple-exchange
  default-language: Haskell2010
  ghc-options: -O2 -Wall

-- Inherited signature: Channel and Error
library simple-exchange-all
  visibility: public
  build-depends:
    , base >=4.10 && <5
    , kafka-interchange
    , kafka-interchange:simple-exchange
  mixins:
    kafka-interchange:simple-exchange (Exchange as Produce.V9)
      requires (Communication as Kafka.Produce.V9),
    kafka-interchange:simple-exchange (Exchange as ApiVersions.V3)
      requires (Communication as Kafka.ApiVersions.V3),
    kafka-interchange:simple-exchange (Exchange as Metadata.V12)
      requires (Communication as Kafka.Metadata.V12),
    kafka-interchange:simple-exchange (Exchange as SyncGroup.V5)
      requires (Communication as Kafka.SyncGroup.V5),
    kafka-interchange:simple-exchange (Exchange as JoinGroup.V9)
      requires (Communication as Kafka.JoinGroup.V9),
    kafka-interchange:simple-exchange (Exchange as Fetch.V13)
      requires (Communication as Kafka.Fetch.V13),
    kafka-interchange:simple-exchange (Exchange as FindCoordinator.V4)
      requires (Communication as Kafka.FindCoordinator.V4),
    kafka-interchange:simple-exchange (Exchange as ListOffsets.V7)
      requires (Communication as Kafka.ListOffsets.V7),
    kafka-interchange:simple-exchange (Exchange as InitProducerId.V4)
      requires (Communication as Kafka.InitProducerId.V4),
    kafka-interchange:simple-exchange (Exchange as OffsetFetch.V8)
      requires (Communication as Kafka.OffsetFetch.V8),
    kafka-interchange:simple-exchange (Exchange as Heartbeat.V4)
      requires (Communication as Kafka.Heartbeat.V4),
    kafka-interchange:simple-exchange (Exchange as LeaveGroup.V5)
      requires (Communication as Kafka.LeaveGroup.V5),
  exposed-modules:
    Client
  hs-source-dirs: src-simple-exchange-all
  default-language: Haskell2010
  ghc-options: -O2 -Wall

library exchange
  visibility: public
  build-depends:
    , base >= 4.11.1.0 && <5
    , kafka-interchange
    , text >=2.0
    , byteslice >=0.2.8
    , primitive >=0.8 
    , bytesmith >=0.3.9
    , byte-order >=0.1.3
  signatures:
    Communication
    Channel
  exposed-modules:
    Exchange
  hs-source-dirs: src-exchange
  default-language: Haskell2010
  ghc-options: -O2 -Wall

-- Inherited signature: Channel
library exchange-all
  visibility: public
  build-depends:
    , base >=4.10 && <5
    , kafka-interchange
    , kafka-interchange:exchange
  mixins:
    kafka-interchange:exchange (Exchange as Produce.V9)
      requires (Communication as Kafka.Produce.V9),
    kafka-interchange:exchange (Exchange as ApiVersions.V3)
      requires (Communication as Kafka.ApiVersions.V3),
    kafka-interchange:exchange (Exchange as Metadata.V12)
      requires (Communication as Kafka.Metadata.V12),
    kafka-interchange:exchange (Exchange as SyncGroup.V5)
      requires (Communication as Kafka.SyncGroup.V5),
    kafka-interchange:exchange (Exchange as JoinGroup.V9)
      requires (Communication as Kafka.JoinGroup.V9),
    kafka-interchange:exchange (Exchange as Fetch.V13)
      requires (Communication as Kafka.Fetch.V13),
    kafka-interchange:exchange (Exchange as FindCoordinator.V4)
      requires (Communication as Kafka.FindCoordinator.V4),
    kafka-interchange:exchange (Exchange as ListOffsets.V7)
      requires (Communication as Kafka.ListOffsets.V7),
    kafka-interchange:exchange (Exchange as InitProducerId.V4)
      requires (Communication as Kafka.InitProducerId.V4),
    kafka-interchange:exchange (Exchange as OffsetFetch.V8)
      requires (Communication as Kafka.OffsetFetch.V8),
    kafka-interchange:exchange (Exchange as Heartbeat.V4)
      requires (Communication as Kafka.Heartbeat.V4),
  exposed-modules:
    Client
  hs-source-dirs: src-exchange-all
  default-language: Haskell2010
  ghc-options: -O2 -Wall

library
  exposed-modules:
    Kafka.Message.Request.V2
    Kafka.ApiVersions.Request.V3
    Kafka.ApiVersions.Response.V3
    Kafka.ApiVersions.V3
    Kafka.Metadata.Request.V12
    Kafka.Metadata.Response.V12
    Kafka.Metadata.V12
    Kafka.InitProducerId.Request.V4
    Kafka.InitProducerId.Response.V4
    Kafka.InitProducerId.V4
    Kafka.Produce.V9
    Kafka.Produce.Request.V9
    Kafka.Produce.Response.V9
    Kafka.Header.Response.V0
    Kafka.Header.Response.V1
    Kafka.FindCoordinator.Request.V4
    Kafka.FindCoordinator.Response.V4
    Kafka.FindCoordinator.V4
    Kafka.ListOffsets.Request.V7
    Kafka.ListOffsets.Response.V7
    Kafka.ListOffsets.V7
    Kafka.Fetch.Request.V13
    Kafka.Fetch.Response.V13
    Kafka.Fetch.V13
    Kafka.Record.Request
    Kafka.Record.Response
    Kafka.RecordBatch.Attributes
    Kafka.RecordBatch.Request
    Kafka.RecordBatch.Response
    Kafka.Assignment.Request.V1
    Kafka.Assignment.Response.V1
    Kafka.Subscription.Request.V1
    Kafka.Subscription.Response.V1
    Kafka.JoinGroup.Request.V9
    Kafka.JoinGroup.Response.V9
    Kafka.JoinGroup.V9
    Kafka.SyncGroup.Request.V5
    Kafka.SyncGroup.Response.V5
    Kafka.SyncGroup.V5
    Kafka.OffsetFetch.Request.V8
    Kafka.OffsetFetch.Response.V8
    Kafka.OffsetFetch.V8
    Kafka.Heartbeat.Request.V4
    Kafka.Heartbeat.Response.V4
    Kafka.Heartbeat.V4
    Kafka.LeaveGroup.Request.V5
    Kafka.LeaveGroup.Response.V5
    Kafka.LeaveGroup.V5
    Kafka.Acknowledgments
    Kafka.TaggedField
    Kafka.ApiKey
    Kafka.Parser.Context
    Kafka.Exchange.Error
  other-modules:
    Kafka.Parser
    Kafka.Builder
    Kafka.Builder.Bounded
  ghc-options:
    -Wall
    -O2
  build-depends:
    , base >= 4.11 && < 5
    , byteslice >= 0.1.1.0 && < 0.3.0.0
    , bytebuild >= 0.3.14
    , bytesmith >= 0.3 && < 0.4
    , castagnoli >= 0.2
    , chronos >= 1.1.5
    , containers >= 0.5
    , contiguous >= 0.6
    , ip >= 1.5.0 && < 1.8
    , mtl >= 2.2.2 && < 2.3
    , primitive >= 0.7.0.0 && < 0.10
    , primitive-unaligned >= 0.1.1.0 && < 0.2.0.0
    , primitive-unlifted >= 0.1.1.0 && < 0.2.0.0
    , stm >= 2.5.0.0
    , text >= 2.0
    , text-short >= 0.1.5
    , torsor >= 0.1 && < 0.2
    , transformers >= 0.5 && < 0.7
    , bytestring >=0.11
    , natural-arithmetic >=0.1.3
    , zigzag >=0.0.1
    , wide-word >=0.1.5
  hs-source-dirs:
    src
  default-language:
    Haskell2010

test-suite test
  type:
    exitcode-stdio-1.0
  main-is:
    Test.hs
  other-modules:
    KafkaFromJson
  hs-source-dirs:
    test
  build-depends:
    , base
    , bytesmith
    , bytestring
    , containers
    , kafka-interchange
    , primitive
    , primitive-unlifted
    , tasty
    , tasty-golden
    , tasty-hunit
    , bytebuild
    , base16 >=0.3.2.1
    , byteslice
    , text
    , pretty-show >=1.10
    , aeson >=2.1.2.1
    , wide-word >=0.1.5
  default-language:
    Haskell2010
  ghc-options:
    -Wall
    -O2
